feat: friend - delete